--- a/develop/package.json
+++ b/develop/package.json
@@ -10,5 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AshleyWhaley/ReadmeGenerator-"
+  },
+  "bugs": {
+    "url": "https://github.com/AshleyWhaley/ReadmeGenerator-/issues"
   }
 }
